--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="row mt-4">
-            <h4><strong>Plaintext</strong></h4>
+            <h4 style="width: 100%;"><strong>Plaintext</strong></h4>
             <p id="text" style="word-break: break-all;"></p>
         </div>
 
